--- a/locales/is/translation.json
+++ b/locales/is/translation.json
@@ -1,55 +1,56 @@
 {
-  "Language": "Язык",
-  "Create Account": "Создать учетную запись",
-  "Create account": "Создать учетную запись",
-  "Login": "Войти",
-  "Logout": "Выйти",
-  "Account": "Учетная запись",
-  "Home": "Дом",
-  "Worlds": "Миры",
-  "Videos": "Видео",
-  "Help": "Помощь",
-  "Docs":"Документация",
-  "Required account information":"Обязательная информация",
-  "Optional information":"Дополнительная информация",
-  "Username":"Имя для входа",
-  "Password": "Пароль",
-  "Confirm Password": "Подтвердить пароль",
-  "Email":"Почта",
-  "Create Account":"Создать запись",
-  "Date Of Birth":"Дата раждения",
-  "Sex":"Пол",
-  "Full Name":"Полное имя",
-  "Location":"Местонахождение",
-  "Homepage":"Домашняя страница",
-  "Search":"Поиск",
+  "Language": "Tungumál",
+  "Choose a neighborhood to chat in": "Veldu hverfi fyrir netspjall",
+  "Create Account": "Búa til aðgang",
+  "Create account": "Búa til aðgang",
+  "Login": "Innskrá",
+  "Logout": "Útskrá",
+  "Account": "Aðgangur",
+  "Home": "Heim",
+  "Worlds": "Heimar",
+  "Videos": "Myndbönd",
+  "Help": "Hjálp",
+  "Docs":"Skjöl",
+  "Required account information":"Þetta þarf fyrir skráningu",
+  "Optional information":"Valfrjálst",
+  "Username":"Notandanafn",
+  "Password": "Lykilorð",
+  "Confirm Password": "Staðfestu lykilorð",
+  "Email":"Tölvupóstur",
+  "Create Account":"Búa til aðgang",
+  "Date Of Birth":"Fæðingardagur",
+  "Sex":"Kyn",
+  "Full Name":"Nafn",
+  "Location":"Staðsettning",
+  "Homepage":"Heim",
+  "Search":"Lei",
   "Sign up":"Búa til notanda",
   "Sign Up":"Búa til notanda",
   "Log in":"Innskrá",
   "Log out":"Útskrá",
-  "Submit":"Принять",
-  "Create a new user account":"Создать учетную запись",
-  "Create":"Создать",
-  "Build a world, or copy an existing one":"Создайте свой мир или скопируйте существующий",
-  "Explore":"Исследовать",
-  "Browse all public worlds":"Исследуйте все открытые миры",
-  "Contribute":"Сотрудничать",
-  "Edit the code or report a bug":"Редактируйте код или сообщайте об ошибках",
-  "Learn":"Изучение",
-  "Create World":"Создать мир",
-  "Choose Avatar":"Выбрать Автара",
-  "Change Password":"Сменить пароль",
-  "Edit Profile":"Редактировать профиль",
-  "No worlds found":"Миров не найдено",
-  "Launch world":"Запустить мир",
-  "Modify":"Модифицировать",
-  "Clone":"Клонировать",
-  "Publish":"Опубликолвать",
-  "History":"История",
+  "Submit":"Senda",
+  "Create a new user account":"Búa til aðgang",
+  "Create":"Búa til",
+  "Build a world, or copy an existing one":"Búa til eða afrita heim",
+  "Explore":"Kanna",
+  "Browse all public worlds":"Skoða alla opna heima",
+  "Contribute":"Hjálpaðu",
+  "Edit the code or report a bug":"Hjálpaðu við kóða eða láttu okkur vita af villu",
+  "Learn":"Um",
+  "Create World":"Búa til heim",
+  "Choose Avatar":"Veldur avatar",
+  "Change Password":"Veldu lykilorð",
+  "Edit Profile":"Breyta aðgangi",
+  "No worlds found":"Engir heimar finnast",
+  "Launch world":"Opna heim",
+  "Modify":"Breyta",
+  "Clone":"Klóna",
+  "Publish":"Gefa út",
+  "History":"Saga",
   "Active users":"Пользователи",
   "0 active users": "0 активных",
   "Delete world":"Удалить мир",
-  "Enter your new password below":"Введите ваш новый пароль",
+  "Enter your new password below":"Settu inn lykilorð að neðan",
   "New Password":"Новый пароль",
   "Confirm New Password":"Подтвердите новый пароль",
   "Results for":"Результат для",
@@ -60,35 +61,35 @@
   "Worlds are Yours":"миры ваши",
   "My Worlds":"Мои миры",
   "New Worlds":"Новые миры",
-  "Create":"Создать",
+  "Create":"Búta til",
   "Featured":"Показательные",
   "Search terms":"Поиск",
   "Back to top": "Наверх",
-  "Forgot your password?":"Забыли пароль?",
+  "Forgot your password?":"Gleymt lykilorð?",
   "Created By":"Создано",
   "Updated":"Обновлено",
   "times, most recently":"раз, последний",
   "Contains":"Содержит",
   "objects":"объектов",
-  "and":"и",
+  "and":"og",
   "anonymous users are in this world":"гостей в мире",
   "Launch":"Войти в мир",
   "View History":"Посмотреть историю",
   "Settings":"Установки",
   "Change Title":"Сменить название",
   "Restore Backup":"Восстановить",
-  "Delete":"Удалить",
+  "Delete":"Eyða",
   "Duplicate":"Клонировать",
   "Choose A Template":"Выбрать шаблон",
-  "previous":"предыдущий",
-  "next":"следующий",
+  "previous":"fyrra",
+  "next":"næst",
   "Your new world will start off as a copy of the template":"Ваш новый мир будет создан из следующего шаблона",
   "No template, please":"Без шаблона",
   "I don't see the template I need":"Я не нахожу нужного шаблона",
   "Create a world based on":"Создать мир на основе",
   "Create a blank new world":"Создать новый мир",
   "Choose a different template":"Выбрать другой шаблон",
-  "Description":"Описание",
+  "Description":"Útskýring",
   "World Title":"Название мира",
   "Edit":"Редактировать",
   "No backups found":"Не найдено сохраненных копий",
@@ -96,8 +97,8 @@
   "Organization":"Организация",
   "Twitter Handle":"Имя в Twitter",
   "Skype Name":"Имя в Skype",
-  "Logged in as":"Вы вошли как",
-  "Enter your username":"Введите имя для входа",
+  "Logged in as":"Innskráður sem",
+  "Enter your username":"Settu inn notendanafn",
   "A temporary password will be emailed to the email address on file":"Временный пароль будет выслан по электронной почте",
   "Compatability Test":"Тест на совместимость браузера",
   "Click the left mouse button":"Нажмите на левую кнопку мыши",
@@ -110,7 +111,7 @@
   "Shoot! Some of the graphics requirements are unsupported on this GPU! You might try upgrading your GPU, drivers, or browser":"Тест не пройден! Графическая карта не поддерживает требования приложения для запуска в браузере!",
   "Shoot! Your browser is unable to connect via a WebSocket to our server! This might be a firewall issue":"Тест не пройден! Ваш браузер не может соединится с сервером используя WebSocket! Возможно это связано с защитным экраном (Firewall)",
   "Check that WebSockets are allowed on port 80":"Проверьте, что WebSockets разрешены на порту 80",
-  "Cancel":"Отмена",
+  "Cancel":"Hætta við",
   "Persistent Worlds":"Устойчивые миры",
   "Make worlds that evolve over time":"Создавайте миры, развивающиеся со временем",
   "Share your creativity":"Разделяйте свое творчество",
