--- a/locales/is/translation.json
+++ b/locales/is/translation.json
@@ -69,22 +69,22 @@
   "Created By":"Создано",
   "Updated":"Обновлено",
   "times, most recently":"раз, последний",
-  "Contains":"Содержит",
-  "objects":"объектов",
+  "Contains":"Er með",
+  "objects":"hluti",
   "and":"og",
   "anonymous users are in this world":"гостей в мире",
-  "Launch":"Войти в мир",
-  "View History":"Посмотреть историю",
-  "Settings":"Установки",
-  "Change Title":"Сменить название",
-  "Restore Backup":"Восстановить",
+  "Launch":"Kveikja á",
+  "View History":"Skoða sögu",
+  "Settings":"Stillingar",
+  "Change Title":"Breyta titli",
+  "Restore Backup":"Ná í afrit",
   "Delete":"Eyða",
-  "Duplicate":"Клонировать",
-  "Choose A Template":"Выбрать шаблон",
+  "Duplicate":"Fjölfalda",
+  "Choose A Template":"Veldu template",
   "previous":"fyrra",
   "next":"næst",
-  "Your new world will start off as a copy of the template":"Ваш новый мир будет создан из следующего шаблона",
-  "No template, please":"Без шаблона",
+  "Your new world will start off as a copy of the template":"Þinn heimur er byggður á template",
+  "No template, please":"Engin template",
   "I don't see the template I need":"Я не нахожу нужного шаблона",
   "Create a world based on":"Создать мир на основе",
   "Create a blank new world":"Создать новый мир",
