Links to worlds

--- a/locales/is/translation.json
+++ b/locales/is/translation.json
@@ -61,7 +61,7 @@
   "Worlds are Yours":"миры ваши",
   "My Worlds":"Мои миры",
   "New Worlds":"Новые миры",
-  "Create":"Búta til",
+  "Create":"Búa til",
   "Featured":"Показательные",
   "Search terms":"Поиск",
   "Back to top": "Наверх",
@@ -85,13 +85,13 @@
   "next":"næst",
   "Your new world will start off as a copy of the template":"Þinn heimur er byggður á template",
   "No template, please":"Engin template",
-  "I don't see the template I need":"Я не нахожу нужного шаблона",
-  "Create a world based on":"Создать мир на основе",
-  "Create a blank new world":"Создать новый мир",
-  "Choose a different template":"Выбрать другой шаблон",
+  "I don't see the template I need":"Sé ekki template sem ég þarf",
+  "Create a world based on":"Búa til heim byggðan á",
+  "Create a blank new world":"Búa til tóman heim",
+  "Choose a different template":"Nota annað template",
   "Description":"Útskýring",
-  "World Title":"Название мира",
-  "Edit":"Редактировать",
+  "World Title":"Titill á heimi",
+  "Edit":"Breyta",
   "No backups found":"Не найдено сохраненных копий",
   "Update Account":"Обновить",
   "Organization":"Организация",
