--- a/locales/is/translation.json
+++ b/locales/is/translation.json
@@ -1,6 +1,8 @@
 {
   "Language": "Tungumál",
   "Choose a neighborhood to chat in": "Veldu hverfi fyrir netspjall",
+  "Log in with Facebook": "Innskrá með Facebook",
+  "Log in with email account": "Innskrá með tölvupóst aðgangi",
   "Create Account": "Búa til aðgang",
   "Create account": "Búa til aðgang",
   "Login": "Innskrá",
@@ -47,32 +49,31 @@
   "Clone":"Klóna",
   "Publish":"Gefa út",
   "History":"Saga",
-  "Active users":"Пользователи",
-  "0 active users": "0 активных",
-  "Delete world":"Удалить мир",
+  "Active users":"Virkir notendur",
+  "0 active users": "0 virkir notendur",
+  "Delete world":"Eyða heimi",
   "Enter your new password below":"Settu inn lykilorð að neðan",
-  "New Password":"Новый пароль",
-  "Confirm New Password":"Подтвердите новый пароль",
-  "Results for":"Результат для",
-  "All Worlds":"Все миры",
-  "Featured Worlds":"Показательные миры",
-  "Newest Worlds":"Недавно созданные миры",
-  "All These":"Все эти",
-  "Worlds are Yours":"миры ваши",
-  "My Worlds":"Мои миры",
+  "New Password":"Nýtt lykilorð",
+  "Confirm New Password":"Staðfestu nýtt lykilorð",
+  "Results for":"Niðurstöður fyrir",
+  "All Worlds":"Allir heimar",
+  "Featured Worlds":"Valdir heimar",
+  "Newest Worlds":"Nýjustu heimar",
+  "All These":"Allir þessir",
+  "Worlds are Yours":"Heimar eru þínir",
+  "My Worlds":"Mínir heimar",
   "New Worlds":"Новые миры",
   "Create":"Búa til",
-  "Featured":"Показательные",
-  "Search terms":"Поиск",
-  "Back to top": "Наверх",
+  "Featured":"Valið",
+  "Search terms":"Leiargildi",
+  "Back to top": "Til baka",
   "Forgot your password?":"Gleymt lykilorð?",
-  "Created By":"Создано",
-  "Updated":"Обновлено",
-  "times, most recently":"раз, последний",
+  "Created By":"Búið til af",
+  "Updated":"Uppfært",
+  "times, most recently":"nr, nýjast",
   "Contains":"Er með",
   "objects":"hluti",
   "and":"og",
-  "anonymous users are in this world":"гостей в мире",
   "Launch":"Kveikja á",
   "View History":"Skoða sögu",
   "Settings":"Stillingar",
@@ -92,57 +93,7 @@
   "Description":"Útskýring",
   "World Title":"Titill á heimi",
   "Edit":"Breyta",
-  "No backups found":"Не найдено сохраненных копий",
-  "Update Account":"Обновить",
-  "Organization":"Организация",
-  "Twitter Handle":"Имя в Twitter",
-  "Skype Name":"Имя в Skype",
   "Logged in as":"Innskráður sem",
   "Enter your username":"Settu inn notendanafn",
-  "A temporary password will be emailed to the email address on file":"Временный пароль будет выслан по электронной почте",
-  "Compatability Test":"Тест на совместимость браузера",
-  "Click the left mouse button":"Нажмите на левую кнопку мыши",
-  "Click the middle mouse button":"Нажмите на среднюю кнопку мыши",
-  "Click the right mouse button":"Нажмите на правую кнопку мыши",
-  "Roll the mouse wheel":"Покрутите колесо мыши",
-  "Shoot! You need a three button mouse to use the Sandbox":"Тест не пройден! Для запуска необходима мышь с тремя кнопками!",
-  "Great! It looks like this browser is supported":"Прекрасно! Ваш браузер совместим с приложением",
-  "Click OK to return to the loading page":"Нажмите OK для перехода на страницу приложения",
-  "Shoot! Some of the graphics requirements are unsupported on this GPU! You might try upgrading your GPU, drivers, or browser":"Тест не пройден! Графическая карта не поддерживает требования приложения для запуска в браузере!",
-  "Shoot! Your browser is unable to connect via a WebSocket to our server! This might be a firewall issue":"Тест не пройден! Ваш браузер не может соединится с сервером используя WebSocket! Возможно это связано с защитным экраном (Firewall)",
-  "Check that WebSockets are allowed on port 80":"Проверьте, что WebSockets разрешены на порту 80",
-  "Cancel":"Hætta við",
-  "Persistent Worlds":"Устойчивые миры",
-  "Make worlds that evolve over time":"Создавайте миры, развивающиеся со временем",
-  "Share your creativity":"Разделяйте свое творчество",
-  "Make as many different worlds as you like":"Создавайте столько миров, сколько захотите",
-  "In Browser Editing":"В браузере",
-  "Create a world right in your web browser":"Создавайте миры прямо в браузере",
-  "Add scripts, 3D models, sounds and behaviors":"Добавляйте скрипты, 3D модели, звуки и поведения",
-  "Works in Chrome, Opera, Firefox and Safari":"Работает в Chrome, Opera, Firefox и Safari",
-  "Collaborative":"Совместно",
-  "Video chat with other users with WebRTC":"Используйте видео чат для разговоров с другими с помощью WebRTC",
-  "Share your world and allow other users to help build":"Разделяйте свои миры и позволяйте другим помогать вам в построении",
-  "You can even have many authors working at once":"Вы можете строить мир одновременно с другими авторами в одно и тоже время",
-  "Creative":"Творчество",
-  "You can create some basic worlds with the built in tools":"Вы можете создавать простые миры используя встроенные инструменты",
-  "Create materials, 3D models, and scripts":"Создавайте материалы, 3D модели и скрипты",
-  "You can even import 3D models, or publish objects for other users to use":"Вы можете импортировать 3D модели или публиковать объекты для совместного использования другими",
-  "Open":"Открытость",
-  "Based on open source technologies":"Основано на открытых технологиях",
-  "Sources available on Github":"Исходный код доступен на Github",
-  "We welcome patches and pull requests":"Приветствуем исправления и новые возможности",
-  "Low Cost":"Низкая цена",
-  "Our demonstration server is free to use":"Наш демонстрационный сервер бесплатен для использования",
-  "Setting up your own server is free and easy":"Установка своего собственного сервера бесплатна и проста",
-  "Please note":"Внимание",
-  "our demo server gets updates frequently":"наш сервер часто обновляется сейчас",
-  "Things can and do break":"Со временем, что-то может работать не так",
-  "No extra plugins needed - just click and go":"Не требуется дополнительных программ - просто нажмите и работайте",
-  "Advanced scripting controls every aspect of your scenario":"Расширенное управление скриптами позволяет контролировать каждый аспект сценария",
-  "Web RTC enables a higher level of collaboration":"Web RTC включает высокий уровень взаимодействия",
-  "A full featured set of tools makes building worlds easy":"Полный набор инструментов моделирования делает построение миров простым",
-  "View Help Pages":"Перейти к помощи",
-  "View All Worlds":"Все миры"
-
+  "Cancel":"Hætta við"
 }
