Layout and translation hacking

--- a/locales/is/translation.json
+++ b/locales/is/translation.json
@@ -1,6 +1,7 @@
 {
   "Language": "Tungumál",
   "Choose a neighborhood to chat in": "Veldu hverfi fyrir netspjall",
+  "If you do not have an email account already you need to create one by clicking the link below": "Ef þú ert ekki með tölvupóst aðgang smelltu á 'Búa til notanda' til að búa til aðgang.",
   "Log in with Facebook": "Innskrá með Facebook",
   "Log in with email account": "Innskrá með tölvupóst aðgangi",
   "Create Account": "Búa til aðgang",
